--- a/speech-commands/package.json
+++ b/speech-commands/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tensorflow-models/speech-commands",
+  "name": "tensorflow-models-speech-commands",
   "version": "0.5.4",
   "description": "Speech-command recognizer in TensorFlow.js",
   "main": "dist/index.js",
@@ -13,15 +13,15 @@
     "url": "https://github.com/tensorflow/tfjs-models.git"
   },
   "peerDependencies": {
-    "@tensorflow/tfjs-core": "^3.0.0",
-    "@tensorflow/tfjs-data": "^3.0.0",
-    "@tensorflow/tfjs-layers": "^3.0.0"
+    "@tensorflow/tfjs-core": "^4.10.0",
+    "@tensorflow/tfjs-data": "^4.10.0",
+    "@tensorflow/tfjs-layers": "^4.10.0"
   },
   "devDependencies": {
-    "@tensorflow/tfjs-core": "^3.0.0",
-    "@tensorflow/tfjs-data": "^3.0.0",
-    "@tensorflow/tfjs-layers": "^3.0.0",
-    "@tensorflow/tfjs-node": "^3.0.0",
+    "@tensorflow/tfjs-core": "4.10.0",
+    "@tensorflow/tfjs-data": "4.10.0",
+    "@tensorflow/tfjs-layers": "4.10.0",
+    "@tensorflow/tfjs-node": "4.10.0",
     "@types/jasmine": "~2.8.8",
     "@types/rimraf": "^2.0.2",
     "@types/tempfile": "^2.0.0",
@@ -33,16 +33,16 @@
     "jasmine-core": "^3.2.1",
     "kissfft-js": "^0.1.8",
     "rimraf": "2.6.2",
-    "rollup": "~0.58.2",
+    "rollup": "2.60.0",
     "rollup-plugin-node-resolve": "~3.3.0",
-    "rollup-plugin-typescript2": "~0.13.0",
+    "rollup-plugin-typescript2": "0.35.0",
     "rollup-plugin-uglify": "~3.0.0",
     "tempfile": "2.0.0",
     "ts-node": "~5.0.0",
-    "tslib": "1.8.0",
+    "tslib": "2.3.1",
     "tslint": "~5.18.0",
     "tslint-no-circular-imports": "^0.6.1",
-    "typescript": "~3.5.3",
+    "typescript": "4.9.4",
     "yalc": "~1.0.0-pre.21"
   },
   "scripts": {
