chore: update models to work with latest tfjs
Signed-off-by: Dale Lane <dale.lane@uk.ibm.com>

--- a/face-landmarks-detection/package.json
+++ b/face-landmarks-detection/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@tensorflow-models/face-landmarks-detection",
-  "version": "1.0.3",
+  "name": "tensorflow-models-face-landmarks-detection",
+  "version": "1.0.4",
   "description": "Pretrained face landmarks detection model",
   "main": "dist/index.js",
   "jsnext:main": "dist/face-landmarks-detection.esm.js",
@@ -13,24 +13,25 @@
     "url": "https://github.com/tensorflow/tfjs-models.git"
   },
   "peerDependencies": {
-    "@mediapipe/face_mesh": "~0.4.0",
-    "@tensorflow/tfjs-backend-webgl": "^4.9.0",
-    "@tensorflow/tfjs-converter": "^4.9.0",
-    "@tensorflow/tfjs-core": "^4.9.0",
-    "@tensorflow-models/face-detection": "~1.0.0"
+    "@mediapipe/face_mesh": "0.4.1633559619",
+    "@tensorflow/tfjs-backend-webgl": "4.10.0",
+    "@tensorflow/tfjs-converter": "4.10.0",
+    "@tensorflow/tfjs-core": "4.10.0",
+    "tensorflow-models-face-detection": "1.0.3"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.10.4",
-    "@mediapipe/face_detection": "^0.4.0",
-    "@mediapipe/face_mesh": "^0.4.0",
+    "@mediapipe/face_detection": "0.4.1646425229",
+    "@mediapipe/face_mesh": "0.4.1633559619",
     "@rollup/plugin-commonjs": "^21.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
-    "@rollup/plugin-typescript": "^3.0.0",
-    "@tensorflow/tfjs-backend-cpu": "^4.9.0",
-    "@tensorflow/tfjs-backend-webgl": "^4.9.0",
-    "@tensorflow/tfjs-converter": "^4.9.0",
-    "@tensorflow/tfjs-core": "^4.9.0",
-    "@tensorflow-models/face-detection": "^1.0.0",
+    "@rollup/plugin-typescript": "9.0.2",
+    "tslib": "2.3.1",
+    "@tensorflow/tfjs-backend-cpu": "4.10.0",
+    "@tensorflow/tfjs-backend-webgl": "4.10.0",
+    "@tensorflow/tfjs-converter": "4.10.0",
+    "@tensorflow/tfjs-core": "4.10.0",
+    "@tensorflow-models/face-detection": "1.0.2",
     "@types/jasmine": "~2.8.8",
     "babel-core": "~6.26.0",
     "babel-plugin-transform-runtime": "~6.23.0",
