--- a/face-detection/package.json
+++ b/face-detection/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@tensorflow-models/face-detection",
-  "version": "1.0.2",
+  "name": "tensorflow-models-face-detection",
+  "version": "1.0.3",
   "description": "Pretrained face detection model",
   "main": "dist/index.js",
   "jsnext:main": "dist/face-detection.esm.js",
@@ -13,41 +13,41 @@
     "url": "https://github.com/tensorflow/tfjs-models.git"
   },
   "peerDependencies": {
-    "@mediapipe/face_detection": "~0.4.0",
-    "@tensorflow/tfjs-backend-webgl": "^4.4.0",
-    "@tensorflow/tfjs-converter": "^4.4.0",
-    "@tensorflow/tfjs-core": "^4.4.0"
+    "@mediapipe/face_detection": "0.4.1646425229",
+    "@tensorflow/tfjs-backend-webgl": "4.10.0",
+    "@tensorflow/tfjs-converter": "4.10.0",
+    "@tensorflow/tfjs-core": "4.10.0"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.10.4",
-    "@mediapipe/face_detection": "^0.4.1646425229",
-    "@rollup/plugin-commonjs": "^11.0.2",
-    "@rollup/plugin-node-resolve": "^7.1.1",
-    "@rollup/plugin-typescript": "^3.0.0",
-    "@tensorflow/tfjs-backend-cpu": "^4.4.0",
-    "@tensorflow/tfjs-backend-webgl": "^4.4.0",
-    "@tensorflow/tfjs-converter": "^4.4.0",
-    "@tensorflow/tfjs-core": "^4.4.0",
-    "@types/jasmine": "~2.8.8",
+    "@mediapipe/face_detection": "0.4.1646425229",
+    "@rollup/plugin-commonjs": "25.0.4",
+    "@rollup/plugin-node-resolve": "6.1.0",
+    "@rollup/plugin-typescript": "11.1.2",
+    "@tensorflow/tfjs-backend-cpu": "4.10.0",
+    "@tensorflow/tfjs-backend-webgl": "4.10.0",
+    "@tensorflow/tfjs-converter": "4.10.0",
+    "@tensorflow/tfjs-core": "4.10.0",
+    "@types/jasmine": "4.3.5",
     "@types/offscreencanvas": "2019.7.0",
-    "babel-core": "~6.26.0",
+    "babel-core": "~6.26.3",
     "babel-plugin-transform-runtime": "~6.23.0",
-    "jasmine": "~3.1.0",
-    "jasmine-core": "~3.1.0",
-    "karma": "~6.4.0",
+    "jasmine": "5.1.0",
+    "jasmine-core": "5.1.1",
+    "karma": "~6.4.2",
     "karma-browserstack-launcher": "~1.6.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-jasmine": "~1.1.0",
-    "karma-spec-reporter": "~0.0.32",
-    "karma-typescript": "~5.5.3",
-    "karma-typescript-es6-transform": "^5.1.0",
-    "rollup": "~2.3.2",
+    "karma-chrome-launcher": "3.2.0",
+    "karma-jasmine": "5.1.0",
+    "karma-spec-reporter": "~0.0.36",
+    "karma-typescript": "~5.5.4",
+    "karma-typescript-es6-transform": "^5.5.4",
+    "rollup": "2.60.0",
     "rollup-plugin-terser": "~7.0.2",
-    "rollup-plugin-visualizer": "~3.3.2",
-    "ts-node": "~8.8.2",
+    "rollup-plugin-visualizer": "5.9.2",
+    "ts-node": "10.9.1",
     "tslint": "^6.1.3",
-    "typescript": "4.8.4",
-    "yalc": "~1.0.0-pre.21"
+    "typescript": "5.2.2",
+    "yalc": "~1.0.0-pre.53"
   },
   "scripts": {
     "bundle": "rollup -c",
@@ -62,7 +62,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "rimraf": "^3.0.2",
-    "tslib": "2.4.0"
+    "rimraf": "^5.0.1",
+    "tslib": "2.6.2"
   }
 }
