--- a/handpose/package.json
+++ b/handpose/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tensorflow-models/handpose",
+  "name": "tensorflow-models-handpose",
   "version": "0.0.7",
   "description": "Pretrained hand detection model",
   "main": "dist/index.js",
@@ -13,18 +13,18 @@
     "url": "https://github.com/tensorflow/tfjs-models.git"
   },
   "peerDependencies": {
-    "@tensorflow/tfjs-backend-webgl": "^4.10.0",
-    "@tensorflow/tfjs-converter": "^4.10.0",
-    "@tensorflow/tfjs-core": "^4.10.0"
+    "@tensorflow/tfjs-backend-webgl": "4.10.0",
+    "@tensorflow/tfjs-converter": "4.10.0",
+    "@tensorflow/tfjs-core": "4.10.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
     "@rollup/plugin-typescript": "^3.0.0",
-    "@tensorflow/tfjs-backend-cpu": "^4.10.0",
-    "@tensorflow/tfjs-backend-webgl": "^4.10.0",
-    "@tensorflow/tfjs-converter": "^4.10.0",
-    "@tensorflow/tfjs-core": "^4.10.0",
+    "@tensorflow/tfjs-backend-cpu": "4.10.0",
+    "@tensorflow/tfjs-backend-webgl": "4.10.0",
+    "@tensorflow/tfjs-converter": "4.10.0",
+    "@tensorflow/tfjs-core": "4.10.0",
     "@types/jasmine": "~2.8.8",
     "babel-core": "~6.26.0",
     "babel-plugin-transform-runtime": "~6.23.0",
